[project]
name = "wialon"
version = "1.1.4"
description = "Wialon Remote API SDK for Python"
authors = [
  {name = "Golden M, Inc.", email = "software@goldenm.com"}
]
requires-python = ">=3.8"

maintainers = [
  {name = "Kenny Mochizuki", email = "kenny@goldenm.com"},
]

dependencies = [
    "requests>=2.32.4",
]

readme = "README.md"
license = {text = "MIT License"}

keywords = [
  "wialon",
  "wialon-sdk",
  "wialon-api",
  "wialon-python",
  "gps-tracking",
  "fleet-management",
  "vehicle-tracking",
  "gps-api",
  "remote-api",
  "layrz",
  "goldenm",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/goldenm-software/wialon-python"
Changelog = "https://github.com/goldenm-software/wialon-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "wialon",
  "wialon.*",
]
namespaces = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.14.1",
    "ruff>=0.12.2",
    "twine>=6.1.0",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
indent-width = 2
line-length = 120

exclude = [
  "**/templates/*",
  ".venv",
]

[tool.ruff.lint]
ignore = [
  "F401", # Unused import
  "E701", # Multiple statements on one line
  "TD003", # Missing issue link
  "ANN401", # Allow Any
]

select = [
  "I", # isort
  "E", "W", # pycodestyle
  "F", # pyflakes
  "B", # flakes8-bugbear
  "TD", # flake8-todo
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "T20", # flake8-print # En un futuro
  "PYI", # flake8-pyi
  "ANN", # flake8-annotations
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"

strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = false

exclude = [
  ".*\\.venv",
  ".*\\.ruff_cache",
  ".*\\.mypy_cache",
]
